@@ -23,6 +23,8 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* rate limiter overflow fix (for very high limits)
+	* non-auto-managed torrents no longer count against the torrent limits
 	* handle DHT error responses correctly
 	* allow force_announce to only affect a single tracker
 	* add moving_storage field to torrent_status
